[tool.poetry]
name = "loopdedupe"
version = "0.1.0"
description = ""
authors = ["Tom Smith <tom@takeontom.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
